change to personal links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,9 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} Your name here. All rights reserved.
+	&copy; {today.getFullYear()} Robert Halter. All rights reserved.
 	<div class="social-links">
-		<a href="https://m.webtoo.ls/@astro" target="_blank">
+		<a href="https://techhub.social/@roebi" target="_blank">
 			<svg
 				viewBox="0 0 16 16"
 				aria-hidden="true"
@@ -18,7 +18,7 @@ const today = new Date();
 				></path></svg
 			>
 		</a>
-		<a href="https://twitter.com/astrodotbuild" target="_blank">
+		<a href="https://twitter.com/roberthalter" target="_blank">
 			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32" astro-icon="social/twitter"
 				><path
 					fill="currentColor"
@@ -26,7 +26,7 @@ const today = new Date();
 				></path></svg
 			>
 		</a>
-		<a href="https://github.com/withastro/astro" target="_blank">
+		<a href="https://github.com/roebi" target="_blank">
 			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32" astro-icon="social/github"
 				><path
 					fill="currentColor"
