--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/BlogPost.astro';
 
 <Layout
 	title="About Me"
-	description="Lorem ipsum dolor sit amet"
+	description="Robert Halter About me"
 	pubDate={new Date('August 06 2023')}
 	heroImage="/blog-placeholder-about.jpg"
 >
