--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,11 +27,12 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			</p>
 			<p>Here are a few ideas on how to get started with the template:</p>
 			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
+				<li>(AT WORK) Edit this page in <code>src/pages/index.astro</code></li>
+				<li>&#9989; Edit the site header items in <code>src/components/Header.astro</code></li>
 				<li>&#9989; Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
+				<li>(AT WORK) Check out the included blog posts in <code>src/pages/blog/</code></li>
+				<li>(AT WORK) Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
+				<li>(AT WORK) Customize the about page <code>src/pages/About.astro</code></li>
 			</ul>
 			<p>
 				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
