--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,8 +6,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
+// -1 * : newest Blog on top
 const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+	(a, b) => -1 * (a.data.pubDate.valueOf() - b.data.pubDate.valueOf())
 );
 ---
 
