header with thinigverse, about with my professional area is, index with directions

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE } from '../consts';
 		</div>
 		<div class="social-links">
 			<a href="https://techhub.social/@roebi" target="_blank">
-				<span class="sr-only">Follow Astro on Mastodon</span>
+				<span class="sr-only">Follow @roebi@techhub.social on Mastodon</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
 					><path
 						fill="currentColor"
@@ -22,7 +22,7 @@ import { SITE_TITLE } from '../consts';
 				>
 			</a>
 			<a href="https://twitter.com/roberthalter" target="_blank">
-				<span class="sr-only">Follow Astro on Twitter</span>
+				<span class="sr-only">Follow Robert Halter on Twitter</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32" -
 					><path
 						fill="currentColor"
@@ -31,11 +31,21 @@ import { SITE_TITLE } from '../consts';
 				>
 			</a>
 			<a href="https://github.com/roebi" target="_blank">
-				<span class="sr-only">Go to Astro's GitHub repo</span>
+				<span class="sr-only">Go to roebis GitHub repos</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
 					><path
 						fill="currentColor"
 						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+					></path></svg
+				>
+			</a>
+			<!-- from https://fontawesomeicons.com/svg/icons/thingiverse -->
+			<a href="https://www.thingiverse.com/roebi" target="_blank">
+				<span class="sr-only">Go to thingiverse repo user roebi</span>
+				<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32"
+					><path
+						fill="currentColor"
+						d="M11.955.005C5.425-.152-.091 5.485.007 11.805c-.235 6.756 5.537 12.25 12.052 12.196C18.621 23.9 23.912 18.595 24 12.03 24.031 5.483 18.505-.18 11.955.005zm-.047 1.701a10.276 10.276 0 0 1 7.36 17.529 10.275 10.275 0 0 1-17.556-7.287C1.71 6.308 6.268 1.728 11.907 1.706zm-5.55 4.781c-.322 0-.358.033-.358.361v2.248c0 .351.04.391.398.391h3.823c.274 0 .274.004.274.265v9.736a.176.176 0 0 0 .051.146c.04.038.093.059.148.053h2.555c.247-.003.283-.035.283-.28v-9.32c0-.124.004-.239 0-.39s.055-.21.218-.21h3.9c.319.004.35-.032.35-.344V6.855c0-.34-.024-.363-.37-.363h-5.626z"
 					></path></svg
 				>
 			</a>
