--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,37 +13,33 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+			<h1>Hello, and welcome!</h1>
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+				Welcome to my new roebi blog. I start with my blog in August 2023.
 			</p>
 			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
+				Current i 'work' in parallel about its blog contents, with all have a own Git repo on github:
+				<a href="https://github.com/roebi">roebi on github</a>
+				. Each blog entry is a kind of quick starter for your own small projects and experiments.
 			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
+			<p>Here are some directions where the first ten starters will go:</p>
 			<ul>
-				<li>(AT WORK) Edit this page in <code>src/pages/index.astro</code></li>
-				<li>&#9989; Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>&#9989; Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>(AT WORK) Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>(AT WORK) Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-				<li>(AT WORK) Customize the about page <code>src/pages/About.astro</code></li>
+				<li>&#9989; 01-01 a vanilla HTML 5 starter Page</li>
+				<li>&#9989; 01-02 a local go webserver on podman</li>
+				<li>(PLANNED) Licenses for software</li>
+				<li>(PLANNED) Licenses for Art</li>
+				<li>(PLANNED) some Gradle with Kotlin Init Setups</li>
+				<li>(PLANNED) use of Apache POI - create Excelfiles - read Excelfiles</li>
+				<li>(PLANNED) XML Translation with Saxon</li>
 			</ul>
 			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
+				Get an overview and take a little insight into what interests you.
 			</p>
 			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
+			    or ask questions in the git repositories.
+			</p>
+			<p>
+			    enjoy - roebi.
 			</p>
 		</main>
 		<Footer />
