add link target _blank

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			</p>
 			<p>
 				Current i 'work' in parallel about its blog contents, with all have a own Git repo on github:
-				<a href="https://github.com/roebi">roebi on github</a>
+				<a href="https://github.com/roebi" target="_blank">roebi on github</a>
 				. Each blog entry is a kind of quick starter for your own small projects and experiments.
 			</p>
 			<p>Here are some directions where the first ten starters will go:</p>
