use of base from astro.config.mjs

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,16 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
+import defineConfig from '../../astro.config.mjs';
 ---
 
 <header>
 	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
+		<h2><a href={`${defineConfig.base}/`}>{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href={`${defineConfig.base}/`}>Home</HeaderLink>
+			<HeaderLink href={`${defineConfig.base}/blog`}>Blog</HeaderLink>
+			<HeaderLink href={`${defineConfig.base}/about`}>About</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://techhub.social/@roebi" target="_blank">
