--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,11 +6,11 @@ import defineConfig from '../../astro.config.mjs';
 
 <header>
 	<nav>
-		<h2><a href={`${defineConfig.base}/`}>{SITE_TITLE}</a></h2>
+		<h2><a href={`${defineConfig.site}${defineConfig.base}/`}>{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href={`${defineConfig.base}/`}>Home</HeaderLink>
-			<HeaderLink href={`${defineConfig.base}/blog`}>Blog</HeaderLink>
-			<HeaderLink href={`${defineConfig.base}/about`}>About</HeaderLink>
+			<HeaderLink href={`${defineConfig.site}${defineConfig.base}/`}>Home</HeaderLink>
+			<HeaderLink href={`${defineConfig.site}${defineConfig.base}/blog`}>Blog</HeaderLink>
+			<HeaderLink href={`${defineConfig.site}${defineConfig.base}/about`}>About</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://techhub.social/@roebi" target="_blank">
