in the links back to defineConfig.base only

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -95,7 +95,7 @@ const posts = (await getCollection('blog')).sort(
 					{
 						posts.map((post) => (
 							<li>
-								<a href={`${defineConfig.site}${defineConfig.base}/blog/${post.slug}/`}>
+								<a href={`${defineConfig.base}/blog/${post.slug}/`}>
 									<img width={720} height={360} src={post.data.heroImage} alt="" />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
