--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,7 +5,7 @@ import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
-import defineConfig from '../../../astro.config.mjs'
+// import defineConfig from '../../../astro.config.mjs'
 
 // -1 * : newest Blog on top
 const posts = (await getCollection('blog')).sort(
@@ -95,7 +95,7 @@ const posts = (await getCollection('blog')).sort(
 					{
 						posts.map((post) => (
 							<li>
-								<a href={`${defineConfig.base}/blog/${post.slug}/`}>
+								<a href={`/roebi-halter-in-blog/blog/${post.slug}/`}>
 									<img width={720} height={360} src={post.data.heroImage} alt="" />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
