--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -96,7 +96,7 @@ const posts = (await getCollection('blog')).sort(
 						posts.map((post) => (
 							<li>
 								<a href={`/roebi-halter-in-blog/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
+									<img width={720} height={360} src={`/roebi-halter-in-blog${post.data.heroImage}`} alt="" />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
 										<FormattedDate date={post.data.pubDate} />
