--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -17,12 +17,15 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href="/roebi-halter-in-blog/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
+<!-- sitemap see https://docs.astro.build/de/guides/integrations-guide/sitemap/ -->
+<link rel="sitemap" href="/roebi-halter-in-blog/sitemap-index.xml" />
+
 <!-- Font preloads -->
-<link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/roebi-halter-in-blog/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/roebi-halter-in-blog/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
