from google search console add meta google-site-verification

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -23,6 +23,9 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <!-- sitemap see https://docs.astro.build/de/guides/integrations-guide/sitemap/ -->
 <link rel="sitemap" href="/roebi-halter-in-blog/sitemap-index.xml" />
 
+<!-- from google search console for https://roebi.github.io/roebi-halter-in-blog/ -->
+<meta name="google-site-verification" content="BowQwc-fZLZoJHWoOvAZwMGEhr5YzW86f8xOjD2rgWg" />
+
 <!-- Font preloads -->
 <link rel="preload" href="/roebi-halter-in-blog/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
 <link rel="preload" href="/roebi-halter-in-blog/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
