--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<ul>
 				<li>&#9989; 01-01 a vanilla HTML 5 starter Page</li>
 				<li>&#9989; 01-02 a local go webserver on podman</li>
-				<li>(PLANNED) Licenses for software</li>
+				<li>&#9989; 01-03 licenses for software</li>
 				<li>(PLANNED) Licenses for Art</li>
 				<li>(PLANNED) some Gradle with Kotlin Init Setups</li>
 				<li>(PLANNED) use of Apache POI - create Excelfiles - read Excelfiles</li>
