index.astro: reformulate sentence in 'work' in parallel'

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				Welcome to my new roebi blog. I start with my blog in August 2023.
 			</p>
 			<p>
-				Current i 'work' in parallel about its blog contents, with all have a own Git repo on github:
+				Current i 'work' in parallel about its blog contents and extending this astro based blog with more functions. Most of the blog entries have a own Git repo on github:
 				<a href="https://github.com/roebi" target="_blank">roebi on github</a>
 				. Each blog entry is a kind of quick starter for your own small projects and experiments.
 			</p>
