add blog entry 01-06-gradle-init-kotlin-application-cli.md

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<li>&#9989; 01-03 licenses for software</li>
 				<li>&#9989; 01-04 licenses for art</li>
 				<li>&#9989; 01-05 dev env setup basestep for jvm</li>
-				<li>(PLANNED) some Gradle with Kotlin Init Setups</li>
+				<li>&#9989; 01-06 Gradle Init Kotlin Application Setup with commandline argument handling</li>
 				<li>(PLANNED) use of Apache POI - create Excelfiles - read Excelfiles</li>
 				<li>(PLANNED) XML Translation with Saxon</li>
 			</ul>
