--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -46,6 +46,21 @@ const today = new Date();
 				></path></svg
 			>
 		</a>
+		<!-- from https://fontawesomeicons.com/svg/icons/rss -->
+		<!-- https://docs.astro.build/de/tutorial/5-astro-api/4/ -->
+		<a href="https://roebi.github.io/roebi-halter-in-blog/rss.xml" target="_blank">
+			<span class="sr-only">Get the RSS Feed of this roebi Blog</span>
+			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
+				><path
+					fill="currentColor"
+					d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"
+                 />
+			     <path
+                   fill="currentColor"
+                   d="M5.5 12a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-3-8.5a1 1 0 0 1 1-1c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1-1-1zm0 4a1 1 0 0 1 1-1 6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1-1-1z"
+				></path></svg
+			>
+		</a>
 	</div>
 </footer>
 <style>
