--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,6 +4,11 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
+// with in package.json:
+//   dependecies: {
+//     "astro-github-api-plugin": "file:../astro-github-api-plugin"
+//   }
+// import AstroGithubApiPlugin from '../../../astro-github-api-plugin';
 
 type Props = CollectionEntry<'blog'>['data'];
 
@@ -77,7 +82,46 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 						<hr />
 					</div>
 					<slot />
-				</div>
+					<!-- https://www.npmjs.com/package/jsonpath -->
+					<!-- https://docs.github.com/en/rest/repos/repos#get-a-repository -->
+					<!-- https://docs.github.com/en/rest/users/users?apiVersion=2022-11-28#get-a-user -->
+				<!--	
+					<h3>Project examples</h3>
+					<div>Project description: <AstroGithubApiPlugin login="roebi" name="01-01-vanilla-HTML5-starter-page" jsonPath="description" /></div>
+					<div>Project homepage: <AstroGithubApiPlugin login="roebi" name="01-01-vanilla-HTML5-starter-page" jsonPath="homepage" /></div>
+					<div>Project 'license.name' wrapped in a 'h2': <AstroGithubApiPlugin login="roebi" name="01-01-vanilla-HTML5-starter-page" jsonPath="license.name" WrappedNodeName="h2"/></div>
+					<div>Project Topics 'topics[0]' wrapped in a 'div' with class 'topiccls' (Press F12 for Debug Tools): <AstroGithubApiPlugin login="roebi" name="01-01-vanilla-HTML5-starter-page" jsonPath="topics[0]" WrappedNodeName="div" wrappedNodeClass="topiccls"/></div>
+
+					<div>Project Topics 'topics[0]' wrapped in a 'div' with class 'topiccls' with navigationBaseURL (Press F12 for Debug Tools): <AstroGithubApiPlugin login="roebi" name="01-01-vanilla-HTML5-starter-page" jsonPath="topics[0]" WrappedNodeName="div" wrappedNodeClass="topiccls" navigationBaseURL="http://emample.com/"/></div>
+
+					<h3>User examples</h3>
+					<div>User name: <AstroGithubApiPlugin login="roebi" jsonPath="name" WrappedNodeName="div" wrappedNodeClass="listcls"/></div>
+				-->
+                <!-- <h3>Project List examples</h3> -->
+					<!-- known 'bug': List are handled with add all text in one, instaed embedd as a html ordered list -->
+					<!-- https://docs.astro.build/de/guides/styling/ -->
+				<!--
+					<style>
+					ol {
+	                  list-style: none; /* example of vertical ordered list */
+	                }
+
+                    li {
+                      display: inline-block;
+                      margin-right: 10px; /* add spacing between items */
+                    }
+					</style>
+                    <div>Project Topics 'topics' ordered list wrapped in a 'div' with class 'topiccls' (Press F12 for Debug Tools): 
+						<AstroGithubApiPlugin
+						login="roebi"
+                        name="01-01-vanilla-HTML5-starter-page"
+                        jsonPath="topics"
+                        WrappedNodeName="div"
+                        wrappedNodeClass="listcls">
+                        </AstroGithubApiPlugin>
+                    </div>
+				-->
+                </div>
 			</article>
 		</main>
 		<Footer />
