simple if githubName then show GitHub Repo Name

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -123,6 +123,14 @@ const { title, description, pubDate, updatedDate, heroImage, githubName } = Astr
 				-->
                 </div>
 			</article>
+			{ githubName &&
+			<article>
+				<div class="prose">
+				    <hr />
+				    GitHub Repo {githubName}
+			    </div>
+			</article>
+		    }
 		</main>
 		<Footer />
 	</body>
