--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,6 +7,7 @@ import Layout from '../layouts/BlogPost.astro';
 	description="Robert Halter About me"
 	pubDate={new Date('August 06 2023')}
 	heroImage="/RobertHalter201911.svg"
+	githubName=""
 >
 	<p>
 		Hello - I am positively surprised that you are here and want to know a little more about me.
