--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,20 +1,20 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
+import { getCollection, CollectionEntry } from 'astro:content';
 import BlogPost from '../../layouts/BlogPost.astro';
 
 export async function getStaticPaths() {
-	const posts = await getCollection('blog');
-	return posts.map((post) => ({
-		params: { slug: post.slug },
-		props: post,
+	const allBlogPosts = await getCollection('blog');
+	return allBlogPosts.map((blogPost) => ({
+		params: { slug: blogPost.slug },
+		props: blogPost,
 	}));
 }
 type Props = CollectionEntry<'blog'>;
 
-const post = Astro.props;
-const { Content } = await post.render();
+const blogPost = Astro.props;
+const { Content } = await blogPost.render();
 ---
 
-<BlogPost {...post.data}>
+<BlogPost {...blogPost.data}>
 	<Content />
 </BlogPost>
