add working topic from github, add components/BlogPostRef.astro, add Topics Header Link, BlogPost.astro: url with sub /roebi-halter-in-blog, githubApi.ts: isProd active, return Promise.resolve :-)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,7 @@ import { SITE_TITLE } from '../consts';
 		<h2><a href="/roebi-halter-in-blog/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/roebi-halter-in-blog/">Home</HeaderLink>
+			<HeaderLink href="/roebi-halter-in-blog/topic">Topics</HeaderLink>
 			<HeaderLink href="/roebi-halter-in-blog/blog">Blog</HeaderLink>
 			<HeaderLink href="/roebi-halter-in-blog/about">About</HeaderLink>
 		</div>
