--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<li>&#9989; 01-04 licenses for art</li>
 				<li>&#9989; 01-05 dev env setup basestep for jvm</li>
 				<li>&#9989; 01-06 Gradle Init Kotlin Application Setup with commandline argument handling</li>
+			</ul>
+			<ul>
+				<li>&#9989; 02-01 02-01-flightgear-keyboard-help</li>
+			</ul>
+			<ul>
 				<li>(PLANNED) use of Apache POI - create Excelfiles - read Excelfiles</li>
 				<li>(PLANNED) XML Translation with Saxon</li>
 			</ul>
