add src/content/blog/02-02-roebi-game-prototype-with-p5js.md update src/pages/index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<li>&#9989; 01-06 Gradle Init Kotlin Application Setup with commandline argument handling</li>
 			</ul>
 			<ul>
-				<li>&#9989; 02-01 02-01-flightgear-keyboard-help</li>
+				<li>&#9989; 02-01 flightgear keyboard help</li>
+				<li>&#9989; 02-02 roebi game prototype with p5.js</li>
 			</ul>
 			<ul>
 				<li>(PLANNED) use of Apache POI - create Excelfiles - read Excelfiles</li>
