add src/content/blog/02-03-aider-chat-and-groq-com.md update src/pages/index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,8 +34,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<ul>
 				<li>&#9989; 02-01 flightgear keyboard help</li>
 				<li>&#9989; 02-02 roebi game prototype with p5.js</li>
+				<li>&#9989; 02-03 aider-chat and groq</li>
 			</ul>
 			<ul>
+				<li>(PLANNED) plan has changed</li>
 				<li>(PLANNED) use of Apache POI - create Excelfiles - read Excelfiles</li>
 				<li>(PLANNED) XML Translation with Saxon</li>
 			</ul>
