--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,6 +37,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<li>&#9989; 02-03 aider-chat and groq</li>
 			</ul>
 			<ul>
+				<li>&#9989; add <a href="https://roebi.github.io/roebi-halter-in-blog/llms.txt" target="_blank">lllms.txt</a> for LLMs helping parsing this blog</li>
+			</ul>
+			<ul>
 				<li>(PLANNED) plan has changed</li>
 				<li>(PLANNED) use of Apache POI - create Excelfiles - read Excelfiles</li>
 				<li>(PLANNED) XML Translation with Saxon</li>
