index.astro : add News, Planned things

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<a href="https://github.com/roebi" target="_blank">roebi on github</a>
 				. Each blog entry is a kind of quick starter for your own small projects and experiments.
 			</p>
+			<p>News:</p>
+			<ul>
+				<li>(WORK IN PROGRESS) My New Development Setup: Transitioning to Minisforum X1 Pro with Fedora Silverblue</li>
+			</ul>
 			<p>Here are some directions where the first ten starters will go:</p>
 			<ul>
 				<li>&#9989; 01-01 a vanilla HTML 5 starter Page</li>
@@ -39,6 +43,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<ul>
 				<li>&#9989; add <a href="https://roebi.github.io/roebi-halter-in-blog/llms.txt" target="_blank">lllms.txt</a> for LLMs helping parsing this blog</li>
 			</ul>
+			<p>Planned things - a plan always change over time:</p>
 			<ul>
 				<li>(PLANNED) plan has changed</li>
 				<li>(PLANNED) use of Apache POI - create Excelfiles - read Excelfiles</li>
